[package]
name = "kvs"
version = "0.1.0"
authors = ["Nick Calibey <nick.calibey@gmail.com>"]
description = "A key-value store"
edition = "2018"

[lib]
test = false

[[bin]]
name = "kvs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
